@@ -2,6 +2,8 @@
 
 Minor installation bug-fixes.
 
+Alarm stuff removed to Yacitros - not appropriate here.
+
 1.0.3
 
 Binary heap fixed for cases of removal not from top of heap.  Added
